@@ -1,3 +1,4 @@
 [B]Version 1.1.96[/B]
 - custom lists: removed 'edit keyword' and 'remove keyword' from the context menu
 - ThePornFull: fix listing
+- Sxyprn: remove Top Networks, added Lookup info contextmenu
